--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
     <com.xinghua.customviewlibrary.views.RoundImageView
         android:layout_width="200dp"
@@ -11,7 +12,13 @@
         android:src="@drawable/test_image"
         app:radius="1000dp"
         android:scaleType="centerCrop"/>
-
+    <!--you can set layout_height any dimension, it wouldn't influent the height for ratio.-->
+    <com.xinghua.customviewlibrary.views.RatioImageView
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        app:ratio="1"
+        android:src="@drawable/test_image"
+        android:scaleType="centerCrop"/>
 
 
 </LinearLayout>
