--- a/customviewlibrary/src/main/res/values/attrs.xml
+++ b/customviewlibrary/src/main/res/values/attrs.xml
@@ -3,4 +3,8 @@
     <declare-styleable name="RoundImageView">
         <attr name="radius" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="RatioImageView">
+        <attr name="ratio" format="float" />
+    </declare-styleable>
 </resources>
