--- a/customviewlibrary/src/main/res/values/attrs.xml
+++ b/customviewlibrary/src/main/res/values/attrs.xml
@@ -7,4 +7,11 @@
     <declare-styleable name="RatioImageView">
         <attr name="ratio" format="float" />
     </declare-styleable>
+
+    <declare-styleable name="OptionalRoundImageView">
+        <attr name="left_top_radius" format="dimension" />
+        <attr name="right_top_radius" format="dimension" />
+        <attr name="left_bottom_radius" format="dimension" />
+        <attr name="right_bottom_radius" format="dimension" />
+    </declare-styleable>
 </resources>
